fix(preview-gen): fixed for dark mode

--- a/src/scss/components/_post-list.scss
+++ b/src/scss/components/_post-list.scss
@@ -79,7 +79,12 @@
     }
   }
 
+  svg {
+    background: var(--color-light);
+  }
+
   figcaption {
     display: none;
+    height: 0;
   }
 }
